--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.06.2022 08:45:46</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.06.2022 09:11:24</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -130,7 +130,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s petrzelkovym pestem a paprickami jalapenos, frijoles refritos {stouchane fazole}, salatek 149</li><li>Peceny filet z cerstveho morskeho vlka s petrzelkovym pestem a paprickami jalapenos, frijoles refritos, salatek 175</li><li>Thajske zlute kari s krutim masem, paprikami, cuketami, mladym zelim, kokosovym mlekem a arasidy, jasminova ryze 149</li><li>Grilovane medailonky z panenske svickove se zampiony a zelenym peprem, pohanka se smazenou cibulkou, salatek 175</li><li>Bramborove gnocchi s brynzou a prazenymi vlasskymi orechy, salatek {L} 149</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s brokolici a pazitkovym jogurtovym dipem, korenena ryze, salatek 149</li><li>Peceny filet z cerstveho africkeho sumecka s brokolici a pazitkovym jogurtovym dipem, korenena ryze, salatek 175</li><li>Maafe – senegalske pikantni hovezi s rajcaty, paprikami, zazvorem a arasidy, jasminova ryze, salatek 149</li><li>Pecena prsicka z divoke kachny se svestkovou omackou,  gratinovane brambory, salatek 175</li><li>Burrito s pecenou mladou cervenou repou, ledovym salatem a ovcim balkanskym syrem, avokadove guacamole, bulgur, salatek {L} 149</li></ol>
 </td>
 </tr>
 </table>
